Fixed weird spacing

--- a/popup.css
+++ b/popup.css
@@ -2,16 +2,6 @@ body {
     min-width: initial;
 }
 
-.candidate-image {
-    width: 100%;
-}
-
-.candidate-image-container {
-    max-height: 350px;
-    overflow: hidden;
-}
-
-
 #like-container {
     text-align: center;
 }
